tests/should_fail/recursive_types/omega.rs
extern crate creusot_std;
use creusot_std::logic::Mapping;

pub struct Bad(Mapping<Bad, bool>);
