tests/should_fail/recursive_types/omega.stderr
error: Illegal recursive type
 --> omega.rs:4:1
  |
4 | pub struct Bad(Mapping<Bad, bool>);
  | ^^^^^^^^^^^^^^ ------------------ Recursive occurrence of Bad under opaque type `creusot_std::logic::Mapping`

error: aborting due to 1 previous error

